Adds not found processes from Invoke-IcingaCheckProcess as plugin output and allows the definition of the plugin status in this case

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1876,7 +1876,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckProcess_Int32_Verbosity$"
-            order = 22
+            order = 23
         }
         "-TotalThreadCountWarning" = {
             description = "Compares thread usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -1910,6 +1910,24 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
                 return "@(" + psarr + ")";
             }}
             order = 20
+        }
+        "-OverrideNotFound" = {
+            set_if = {{
+                var str = macro("$IcingaCheckProcess_String_OverrideNotFound$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a process was not found on the system. By default, it will report UNKNOWN but you can set with this argument if the process state should be OK, WARNING or CRITICAL instead"
+            value = {{
+                var str = macro("$IcingaCheckProcess_String_OverrideNotFound$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
+            order = 21
         }
         "-TotalCPUWarning" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -1990,7 +2008,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 21
+            order = 22
         }
         "-TotalCPUCritical" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -2083,6 +2101,9 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         }
         "TotalThreadCountCritical" = {
             value = "$IcingaCheckProcess_Object_TotalThreadCountCritical$"
+        }
+        "OverrideNotFound" = {
+            value = "$IcingaCheckProcess_String_OverrideNotFound$"
         }
         "MemoryWarning" = {
             value = "$IcingaCheckProcess_Object_MemoryWarning$"
@@ -3621,7 +3642,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 10
         }
         "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -4896,7 +4917,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4994,12 +5015,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
