--- a/config/icinga/Invoke-IcingaCheckProcess.conf
+++ b/config/icinga/Invoke-IcingaCheckProcess.conf
@@ -14,7 +14,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckProcess_Int32_Verbosity$"
-            order = 22
+            order = 23
         }
         "-TotalThreadCountWarning" = {
             description = "Compares thread usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -48,6 +48,24 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
                 return "@(" + psarr + ")";
             }}
             order = 20
+        }
+        "-OverrideNotFound" = {
+            set_if = {{
+                var str = macro("$IcingaCheckProcess_String_OverrideNotFound$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a process was not found on the system. By default, it will report UNKNOWN but you can set with this argument if the process state should be OK, WARNING or CRITICAL instead"
+            value = {{
+                var str = macro("$IcingaCheckProcess_String_OverrideNotFound$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
+            order = 21
         }
         "-TotalCPUWarning" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -128,7 +146,7 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 21
+            order = 22
         }
         "-TotalCPUCritical" = {
             description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
@@ -221,6 +239,9 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         }
         "TotalThreadCountCritical" = {
             value = "$IcingaCheckProcess_Object_TotalThreadCountCritical$"
+        }
+        "OverrideNotFound" = {
+            value = "$IcingaCheckProcess_String_OverrideNotFound$"
         }
         "MemoryWarning" = {
             value = "$IcingaCheckProcess_Object_MemoryWarning$"
