Fixes performance data for ScheduledTask plugin for Last and Next RunTime

--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -6,7 +6,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             set_if = {{
                 var str = macro("$IcingaCheckScheduledTask_String_WarningNextRunTime$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Allows to specify a time interval, on which the check will return warning based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
+            description = "Allows to specify a time interval, on which the check will return warning based on the next run time of a task and the current time. The NextRunTime is an offset of the next time the task will run to the current time, therefore increasing over time. Negative NextRunTime values mean the task is scheduled in the future  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
             value = {{
                 var str = macro("$IcingaCheckScheduledTask_String_WarningNextRunTime$");
                 var argLen = len(str);
@@ -24,7 +24,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             set_if = {{
                 var str = macro("$IcingaCheckScheduledTask_String_CriticalNextRunTime$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Allows to specify a time interval, on which the check will return critical based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
+            description = "Allows to specify a time interval, on which the check will return critical based on the next run time of a task and the current time. The NextRunTime is an offset of the next time the task will run to the current time, therefore increasing over time. Negative NextRunTime values mean the task is scheduled in the future  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
             value = {{
                 var str = macro("$IcingaCheckScheduledTask_String_CriticalNextRunTime$");
                 var argLen = len(str);
@@ -46,7 +46,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             set_if = {{
                 var str = macro("$IcingaCheckScheduledTask_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/110-Installation/06-Collect-Metrics-over-Time/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
             value = {{
                 var str = macro("$IcingaCheckScheduledTask_String_ThresholdInterval$");
                 var argLen = len(str);
@@ -96,7 +96,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             set_if = {{
                 var str = macro("$IcingaCheckScheduledTask_String_CriticalLastRunTime$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Allows to specify a time interval, on which the check will return critical based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
+            description = "Allows to specify a time interval, on which the check will return critical based on the last run time of a task and the current time. The LastRunTime is an offset of the last time the task run to the current time, therefore increasing over time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
             value = {{
                 var str = macro("$IcingaCheckScheduledTask_String_CriticalLastRunTime$");
                 var argLen = len(str);
@@ -170,7 +170,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             set_if = {{
                 var str = macro("$IcingaCheckScheduledTask_String_WarningLastRunTime$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Allows to specify a time interval, on which the check will return warning based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
+            description = "Allows to specify a time interval, on which the check will return warning based on the last run time of a task and the current time. The LastRunTime is an offset of the last time the task run to the current time, therefore increasing over time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
             value = {{
                 var str = macro("$IcingaCheckScheduledTask_String_WarningLastRunTime$");
                 var argLen = len(str);
