--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1548,12 +1548,12 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskReadByteSecWarning" = {
             description = "Warning threshold for disk Read Bytes/sec is the rate at which bytes are transferred from the disk during read operations."
             value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecWarning$"
-            order = 14
+            order = 16
         }
         "-DiskWriteByteSecWarning" = {
             description = "Warning threshold for disk Write Bytes/sec is rate at which bytes are transferred to the disk during write operations."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteByteSecWarning$"
-            order = 16
+            order = 18
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_NoPerfData$"
@@ -1630,12 +1630,12 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskQueueAvgLenCritical" = {
             description = "Critical threshold for Avg. Disk Queue Length is the average number of both read and write requests that were queued for the selected disk during the sample interval."
             value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenCritical$"
-            order = 13
+            order = 15
         }
         "-DiskQueueLenWarning" = {
             description = "Warning threshold for current Disk Queue Length is the number of requests outstanding on the disk at the time the performance data is collected. It also includes requests in service at the time of the collection. This is a instantaneous snapshot, not an average over the time interval. Multi-spindle disk devices can have multiple requests that are active at one time, but other concurrent requests are awaiting service. This counter might reflect a transitory high or low queue length, but if there is a sustained load on the disk drive, it is likely that this will be consistently high. Requests experience delays proportional to the length of this queue minus the number of spindles on the disks. For good performance, this difference should average less than two."
             value = "$IcingaCheckDiskHealth_Object_DiskQueueLenWarning$"
-            order = 10
+            order = 12
         }
         "-IncludePartition" = {
             description = "Specify the partition drive letters for disks to include for checks. Example C:, D:"
@@ -1663,47 +1663,93 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskAvgReadSecCritical" = {
             description = "Critical threshold for avg. Disk sec/Read is the average time, in seconds, of a read of data from the disk. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgReadSecCritical$"
-            order = 21
+            order = 23
         }
         "-DiskWriteSecCritical" = {
             description = "Critical threshold for disk Writes/sec is the rate of write operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteSecCritical$"
-            order = 9
+            order = 11
         }
         "-DiskQueueAvgLenWarning" = {
             description = "Warning threshold for Avg. Disk Queue Length is the average number of both read and write requests that were queued for the selected disk during the sample interval."
             value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenWarning$"
-            order = 12
+            order = 14
+        }
+        "-ExcludeFriendlyName" = {
+            description = "Specify the friendly name of disks you want to exclude from checks. Example 'Samsung SSD 970 EVO Plus 1TB'"
+            value = {{
+                var arr = macro("$IcingaCheckDiskHealth_Array_ExcludeFriendlyName$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 7
         }
         "-DiskAvgReadSecWarning" = {
             description = "Warning threshold for avg. Disk sec/Read is the average time, in seconds, of a read of data from the disk. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgReadSecWarning$"
-            order = 20
+            order = 22
         }
         "-DiskWriteByteSecCritical" = {
             description = "Critical threshold for disk Write Bytes/sec is rate at which bytes are transferred to the disk during write operations."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteByteSecCritical$"
-            order = 17
+            order = 19
         }
         "-DiskAvgTransSecWarning" = {
             description = "Warning threshold for avg. Disk sec/Transfer is the time, in seconds, of the average disk transfer. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgTransSecWarning$"
-            order = 18
+            order = 20
+        }
+        "-IncludeFriendlyName" = {
+            description = "Specify the friendly name of disks you want to include for checks. Example 'Samsung SSD 970 EVO Plus 1TB'"
+            value = {{
+                var arr = macro("$IcingaCheckDiskHealth_Array_IncludeFriendlyName$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 6
         }
         "-DiskAvgWriteSecWarning" = {
             description = "Warning threshold for Avg. Disk sec/Write is the average time, in seconds, of a write of data to the disk. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgWriteSecWarning$"
-            order = 22
+            order = 24
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckDiskHealth_Int32_Verbosity$"
-            order = 24
+            order = 26
         }
         "-DiskReadSecWarning" = {
             description = "Warning threshold for disk Reads/sec is the rate of read operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskReadSecWarning$"
-            order = 6
+            order = 8
         }
         "-ExcludePartition" = {
             description = "Specify the partition drive letters for disks to exclude from checks. Example C:, D:"
@@ -1731,7 +1777,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskReadSecCritical" = {
             description = "Critical threshold for disk Reads/sec is the rate of read operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskReadSecCritical$"
-            order = 7
+            order = 9
         }
         "-CheckLogicalOnly" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly$"
@@ -1740,12 +1786,12 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskReadByteSecCritical" = {
             description = "Critical threshold for disk Read Bytes/sec is the rate at which bytes are transferred from the disk during read operations."
             value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecCritical$"
-            order = 15
+            order = 17
         }
         "-DiskAvgWriteSecCritical" = {
             description = "Critical threshold for Avg. Disk sec/Write is the average time, in seconds, of a write of data to the disk. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgWriteSecCritical$"
-            order = 23
+            order = 25
         }
         "-IgnoreOfflineDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks$"
@@ -1754,21 +1800,24 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "-DiskWriteSecWarning" = {
             description = "Warning threshold for disk Writes/sec is the rate of write operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteSecWarning$"
-            order = 8
+            order = 10
         }
         "-DiskQueueLenCritical" = {
             description = "Critical threshold for current Disk Queue Length is the number of requests outstanding on the disk at the time the performance data is collected. It also includes requests in service at the time of the collection. This is a instantaneous snapshot, not an average over the time interval. Multi-spindle disk devices can have multiple requests that are active at one time, but other concurrent requests are awaiting service. This counter might reflect a transitory high or low queue length, but if there is a sustained load on the disk drive, it is likely that this will be consistently high. Requests experience delays proportional to the length of this queue minus the number of spindles on the disks. For good performance, this difference should average less than two."
             value = "$IcingaCheckDiskHealth_Object_DiskQueueLenCritical$"
-            order = 11
+            order = 13
         }
         "-DiskAvgTransSecCritical" = {
             description = "Critical threshold for avg. Disk sec/Transfer is the time, in seconds, of the average disk transfer. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
             value = "$IcingaCheckDiskHealth_Object_DiskAvgTransSecCritical$"
-            order = 19
+            order = 21
         }
     }
     vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = false
     vars.ifw_api_arguments = {
+        "DiskReadByteSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecCritical$"
+        }
         "NoPerfData" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_NoPerfData$"
         }
@@ -1783,6 +1832,9 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "DiskReadByteSecWarning" = {
             value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecWarning$"
+        }
+        "ExcludeFriendlyName" = {
+            value = "$IcingaCheckDiskHealth_Array_ExcludeFriendlyName$"
         }
         "IgnoreReadOnlyDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
@@ -1802,8 +1854,8 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         "DiskAvgTransSecWarning" = {
             value = "$IcingaCheckDiskHealth_Object_DiskAvgTransSecWarning$"
         }
-        "DiskReadByteSecCritical" = {
-            value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecCritical$"
+        "IncludeFriendlyName" = {
+            value = "$IcingaCheckDiskHealth_Array_IncludeFriendlyName$"
         }
         "DiskAvgReadSecCritical" = {
             value = "$IcingaCheckDiskHealth_Object_DiskAvgReadSecCritical$"
@@ -3596,7 +3648,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -3642,7 +3694,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 10
         }
         "-CriticalTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -3903,7 +3955,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
 
     arguments += {
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
+            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -3981,7 +4033,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -4917,7 +4969,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4940,7 +4992,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -4963,7 +5015,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -5015,12 +5067,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the security update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
