Adds support for `Invoke-IcingaCheckHTTPStatus` to allow for ignoring SSL/TLS errors

--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -178,6 +178,10 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             value = "$IcingaCheckHTTPStatus_Object_Critical$"
             order = 3
         }
+        "-IgnoreSSL" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL$"
+            order = 99
+        }
         "-Headers" = {
             description = "Used to specify headers as Array. Like: -Headers 'Accept:application/json'"
             value = {{
@@ -266,6 +270,9 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
         "AddOutputContent" = {
             set_if = "$IcingaCheckHTTPStatus_Switchparameter_AddOutputContent$"
         }
+        "IgnoreSSL" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL$"
+        }
         "ProxyUsername" = {
             value = "$IcingaCheckHTTPStatus_String_ProxyUsername$"
         }
@@ -299,6 +306,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
     }
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
     vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL = false
     vars.ifw_api_command = "invoke-icingacheckhttpstatus"
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
