--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -871,6 +871,10 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             value = "$IcingaCheckHTTPStatus_Object_Critical$"
             order = 3
         }
+        "-IgnoreSSL" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL$"
+            order = 99
+        }
         "-Headers" = {
             description = "Used to specify headers as Array. Like: -Headers 'Accept:application/json'"
             value = {{
@@ -959,6 +963,9 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
         "AddOutputContent" = {
             set_if = "$IcingaCheckHTTPStatus_Switchparameter_AddOutputContent$"
         }
+        "IgnoreSSL" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL$"
+        }
         "ProxyUsername" = {
             value = "$IcingaCheckHTTPStatus_String_ProxyUsername$"
         }
@@ -992,6 +999,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
     }
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
     vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_IgnoreSSL = false
     vars.ifw_api_command = "invoke-icingacheckhttpstatus"
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
@@ -3648,7 +3656,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -3955,7 +3963,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
 
     arguments += {
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -4969,7 +4977,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4992,7 +5000,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -5015,7 +5023,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -5067,7 +5075,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
