Add Support for -OverrideNotOk to Invoke-IcingaCheckService

--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -50,7 +50,25 @@ object CheckCommand "Invoke-IcingaCheckService" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckService_Int32_Verbosity$"
-            order = 7
+            order = 8
+        }
+        "-OverrideNotOk" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotOk$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a service is not returning OK. By default, it will report CRITICAL but you can set with this argument if the service state should be OK, WARNING, CRITICAL or UNKNOWN instead"
+            value = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotOk$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
+            order = 6
         }
         "-OverrideNotFound" = {
             set_if = {{
@@ -68,7 +86,7 @@ object CheckCommand "Invoke-IcingaCheckService" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 6
+            order = 7
         }
         "-Status" = {
             set_if = {{
@@ -146,6 +164,9 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "MitigateUnknown" = {
             set_if = "$IcingaCheckService_Switchparameter_MitigateUnknown$"
+        }
+        "OverrideNotOk" = {
+            value = "$IcingaCheckService_String_OverrideNotOk$"
         }
         "FilterStartupType" = {
             value = "$IcingaCheckService_Array_FilterStartupType$"
