--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -3702,7 +3702,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 10
         }
         "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -4281,7 +4281,25 @@ object CheckCommand "Invoke-IcingaCheckService" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckService_Int32_Verbosity$"
-            order = 7
+            order = 8
+        }
+        "-OverrideNotOk" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotOk$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "This argument will allow you to override the default behavior of the plugin in case a service is not returning OK. By default, it will report CRITICAL but you can set with this argument if the service state should be OK, WARNING, CRITICAL or UNKNOWN instead"
+            value = {{
+                var str = macro("$IcingaCheckService_String_OverrideNotOk$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
+            order = 6
         }
         "-OverrideNotFound" = {
             set_if = {{
@@ -4299,7 +4317,7 @@ object CheckCommand "Invoke-IcingaCheckService" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 6
+            order = 7
         }
         "-Status" = {
             set_if = {{
@@ -4377,6 +4395,9 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "MitigateUnknown" = {
             set_if = "$IcingaCheckService_Switchparameter_MitigateUnknown$"
+        }
+        "OverrideNotOk" = {
+            value = "$IcingaCheckService_String_OverrideNotOk$"
         }
         "FilterStartupType" = {
             value = "$IcingaCheckService_Array_FilterStartupType$"
@@ -4995,7 +5016,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -5033,12 +5054,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -5080,7 +5101,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
