Adds improved handling for partition plugin, which now also include mountpoints for MSSQL for example

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -558,7 +558,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only include partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard include filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckPartitionSpace_Array_Include$");
                 if (len(arr) == 0) {
@@ -599,7 +599,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only exclude partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard exclude filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckPartitionSpace_Array_Exclude$");
                 if (len(arr) == 0) {
@@ -622,7 +622,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             order = 5
         }
         "-RequiredPartition" = {
-            description = "Allows to define a list of partitions which should be included in the check. e.g. 'C:','D:'  In case they are missing, the plugin will report CRITICAL"
+            description = "Allows to define a list of partitions which should be included in the check. e.g. 'C:','D:', 'D:\\SysDB\\'  In case they are missing, the plugin will report CRITICAL"
             value = {{
                 var arr = macro("$IcingaCheckPartitionSpace_Array_RequiredPartition$");
                 if (len(arr) == 0) {
@@ -4122,7 +4122,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only include partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard include filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                 if (len(arr) == 0) {
@@ -4163,7 +4163,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only exclude partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard exclude filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                 if (len(arr) == 0) {
