--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -30,7 +30,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only include partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard include filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                 if (len(arr) == 0) {
@@ -71,7 +71,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:', 'D:\\SysDB\\'  If you want to only exclude partitions from the system volume, like `\\\\?\\Volume{151b43fc-3f70-41b0-92eb-dff7c419ccc0}\\` you can define a wildcard exclude filter with '*`\\\\?*'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                 if (len(arr) == 0) {
