Fixes HTTP StatusCode plugin argument documentation

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -696,6 +696,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
 
     arguments += {
         "-StatusCode" = {
+            description = "Used to specify expected HTTP status code as array. Multiple status codes which are considered 'OK' can be used. This overwrites the default outcomes for HTTP status codes: <   200      Unknown     200-399  OK     400-499  Warning     500-599  Critical >=  600      Unknown"
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_StatusCode$");
                 if (len(arr) == 0) {
