Fixes HTTP status code Minium documentation Fixes general bug which made the plugin not check for status codes Adds another minimum to test for a certain number of reachable sites Adds proper documention for plugin usage

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -725,10 +725,15 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckHTTPStatus_Int32_Verbosity$"
+            order = 17
+        }
+        "-StatusMinimum" = {
+            description = "Used to specify the minimum number of of the 'HTTP Status Check' package checks that must be 'OK' to consider the overall check as 'OK'. This will evaluate the entire package of the Url check, including Status Code, Content Matches and Response Time. If not specified, all checks must be 'OK' in order for the overall check to be 'OK'."
+            value = "$IcingaCheckHTTPStatus_Int32_StatusMinimum$"
             order = 16
         }
         "-Content" = {
-            description = "Used to specify an array of regex-match-strings to match against the content of the webrequest response."
+            description = "Used to specify an array of regex-match-strings to match against the content of the web request response."
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_Content$");
                 if (len(arr) == 0) {
@@ -813,12 +818,12 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 99
         }
         "-Password" = {
-            description = "Used to specify a password as securestring to authenticate with. Authentication is only possible with 'https://'.Use with: -Username"
+            description = "Used to specify a password as secure string to authenticate with. Authentication is only possible with 'https://'.Use with: -Username"
             value = "(ConvertTo-IcingaSecureString '$IcingaCheckHTTPStatus_Securestring_Password$')"
             order = 9
         }
         "-Warning" = {
-            description = "Used to specify the webrequest response time warning threshold in seconds, everything past that threshold is considered a WARNING."
+            description = "Used to specify the web request response time warning threshold in seconds, everything past that threshold is considered a WARNING."
             value = "$IcingaCheckHTTPStatus_Object_Warning$"
             order = 2
         }
@@ -841,11 +846,12 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 12
         }
         "-ProxyPassword" = {
-            description = "Used to specify a proxy password as securestring to authenticate with. Use with: -ProxyUsername & -ProxyServer"
+            description = "Used to specify a proxy password as secure string to authenticate with. Use with: -ProxyUsername & -ProxyServer"
             value = "(ConvertTo-IcingaSecureString '$IcingaCheckHTTPStatus_Securestring_ProxyPassword$')"
             order = 11
         }
         "-Minimum" = {
+            description = "Used to specify the minimum number of content matches that must be found to consider the content check as 'OK'. If not specified, all content matches must be found."
             value = "$IcingaCheckHTTPStatus_Int32_Minimum$"
             order = 15
         }
@@ -868,7 +874,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 5
         }
         "-Critical" = {
-            description = "Used to specify the webrequest response time critical threshold in seconds, everything past that threshold is considered a CRITICAL."
+            description = "Used to specify the web request response time critical threshold in seconds, everything past that threshold is considered a CRITICAL."
             value = "$IcingaCheckHTTPStatus_Object_Critical$"
             order = 3
         }
@@ -900,7 +906,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 6
         }
         "-Timeout" = {
-            description = "Used to specify the timeout in seconds of the webrequest as integer. The default is 10 for 10 seconds."
+            description = "Used to specify the timeout in seconds of the web request as integer. The default is 10 for 10 seconds."
             value = "$IcingaCheckHTTPStatus_Int32_Timeout$"
             order = 7
         }
@@ -978,6 +984,9 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
         }
         "Critical" = {
             value = "$IcingaCheckHTTPStatus_Object_Critical$"
+        }
+        "StatusMinimum" = {
+            value = "$IcingaCheckHTTPStatus_Int32_StatusMinimum$"
         }
         "StatusCode" = {
             value = "$IcingaCheckHTTPStatus_Array_StatusCode$"
@@ -4084,7 +4093,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -5087,7 +5096,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -5097,7 +5106,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
