--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -5,12 +5,7 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckMPIO_Object_Verbosity$"
-            order = 4
-        }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold for the number of path defined. Use for example 8: for alerting for less than 8 MPIO paths available"
-            value = "$IcingaCheckMPIO_Object_Warning$"
-            order = 2
+            order = 6
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -30,8 +25,54 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
             }}
             order = 100
         }
+        "-NumberOfPathCritical" = {
+            description = "An array of specific Critical thresholds for the number of paths per MPIO device. Use the format 'VolumeName=Threshold' e.g. 'LUN001*=6', also supports Icinga thresholds like 'LUN001*=6:'"
+            value = {{
+                var arr = macro("$IcingaCheckMPIO_Array_NumberOfPathCritical$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 5
+        }
+        "-NumberOfPathWarning" = {
+            description = "An array of specific Warning thresholds for the number of paths per MPIO device. Use the format 'VolumeName=Threshold' e.g. 'LUN001*=8', also supports Icinga thresholds like 'LUN002*=8:'"
+            value = {{
+                var arr = macro("$IcingaCheckMPIO_Array_NumberOfPathWarning$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 4
+        }
         "-Critical" = {
-            description = "Used to specify a Critical threshold for the number of path defined. Use for example 6: for alerting for less than 6 MPIO paths available"
+            description = "This threshold is deprecated, please use NumberOfPathCritical instead."
             value = "$IcingaCheckMPIO_Object_Critical$"
             order = 3
         }
@@ -39,20 +80,31 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
             set_if = "$IcingaCheckMPIO_Switchparameter_NoPerfData$"
             order = 99
         }
+        "-Warning" = {
+            description = "This threshold is deprecated, please use NumberOfPathWarning instead."
+            value = "$IcingaCheckMPIO_Object_Warning$"
+            order = 2
+        }
     }
     vars.IcingaCheckMPIO_Switchparameter_NoPerfData = false
     vars.ifw_api_arguments = {
-        "Critical" = {
-            value = "$IcingaCheckMPIO_Object_Critical$"
-        }
-        "Warning" = {
-            value = "$IcingaCheckMPIO_Object_Warning$"
+        "NumberOfPathWarning" = {
+            value = "$IcingaCheckMPIO_Array_NumberOfPathWarning$"
         }
         "ThresholdInterval" = {
             value = "$IcingaCheckMPIO_String_ThresholdInterval$"
         }
         "NoPerfData" = {
             set_if = "$IcingaCheckMPIO_Switchparameter_NoPerfData$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckMPIO_Object_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckMPIO_Object_Warning$"
+        }
+        "NumberOfPathCritical" = {
+            value = "$IcingaCheckMPIO_Array_NumberOfPathCritical$"
         }
         "Verbosity" = {
             value = "$IcingaCheckMPIO_Object_Verbosity$"
@@ -3708,7 +3760,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -5111,7 +5163,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the rollup update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
