Adds support to filter for TaskPath of Scheduled Tasks being checked

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -2374,7 +2374,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 9
+            order = 10
         }
         "-CriticalNextRunTime" = {
             set_if = {{
@@ -2392,7 +2392,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 10
+            order = 11
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
@@ -2419,7 +2419,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         "-WarningMissedRuns" = {
             description = "Defines a warning threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_WarningMissedRuns$"
-            order = 5
+            order = 6
         }
         "-IgnoreLastRunTime" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime$"
@@ -2464,7 +2464,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 8
+            order = 9
         }
         "-IgnoreExitCodes" = {
             description = "A list of exit codes which will be considered as [OK]. By default every task which did not exit with 0 will be handled as critical."
@@ -2487,12 +2487,12 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 4
+            order = 5
         }
         "-CriticalMissedRuns" = {
             description = "Defines a critical threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_CriticalMissedRuns$"
-            order = 6
+            order = 7
         }
         "-State" = {
             description = "The state a task should currently have for the plugin to return [OK]"
@@ -2515,12 +2515,12 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 3
+            order = 4
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
-            order = 11
+            order = 12
         }
         "-WarningLastRunTime" = {
             set_if = {{
@@ -2538,7 +2538,30 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 7
+            order = 8
+        }
+        "-TaskPath" = {
+            description = "A list of task paths to filter for. If no path is specified all paths are checked."
+            value = {{
+                var arr = macro("$IcingaCheckScheduledTask_Array_TaskPath$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 3
         }
     }
     vars.IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime = false
@@ -2557,6 +2580,9 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         }
         "WarningNextRunTime" = {
             value = "$IcingaCheckScheduledTask_String_WarningNextRunTime$"
+        }
+        "TaskPath" = {
+            value = "$IcingaCheckScheduledTask_Array_TaskPath$"
         }
         "CriticalLastRunTime" = {
             value = "$IcingaCheckScheduledTask_String_CriticalLastRunTime$"
@@ -3760,7 +3786,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -5102,7 +5128,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -5125,7 +5151,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -5158,12 +5184,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
