--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -18,7 +18,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 9
+            order = 10
         }
         "-CriticalNextRunTime" = {
             set_if = {{
@@ -36,7 +36,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 10
+            order = 11
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
@@ -63,7 +63,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         "-WarningMissedRuns" = {
             description = "Defines a warning threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_WarningMissedRuns$"
-            order = 5
+            order = 6
         }
         "-IgnoreLastRunTime" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime$"
@@ -108,7 +108,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 8
+            order = 9
         }
         "-IgnoreExitCodes" = {
             description = "A list of exit codes which will be considered as [OK]. By default every task which did not exit with 0 will be handled as critical."
@@ -131,12 +131,12 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 4
+            order = 5
         }
         "-CriticalMissedRuns" = {
             description = "Defines a critical threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_CriticalMissedRuns$"
-            order = 6
+            order = 7
         }
         "-State" = {
             description = "The state a task should currently have for the plugin to return [OK]"
@@ -159,12 +159,12 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 3
+            order = 4
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
-            order = 11
+            order = 12
         }
         "-WarningLastRunTime" = {
             set_if = {{
@@ -182,7 +182,30 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 7
+            order = 8
+        }
+        "-TaskPath" = {
+            description = "A list of task paths to filter for. If no path is specified all paths are checked."
+            value = {{
+                var arr = macro("$IcingaCheckScheduledTask_Array_TaskPath$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 3
         }
     }
     vars.IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime = false
@@ -201,6 +224,9 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         }
         "WarningNextRunTime" = {
             value = "$IcingaCheckScheduledTask_String_WarningNextRunTime$"
+        }
+        "TaskPath" = {
+            value = "$IcingaCheckScheduledTask_Array_TaskPath$"
         }
         "CriticalLastRunTime" = {
             value = "$IcingaCheckScheduledTask_String_CriticalLastRunTime$"
